--- a/src/components/After_Login/BoardingFilter.css
+++ b/src/components/After_Login/BoardingFilter.css
@@ -1,57 +1,88 @@
 /* BoardingFilter.css */
 
 .boarding-filter {
-    background-color: #f7f7f7;
-    padding: 15px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    padding: 20px;
+    border: 1px solid #e1e1e1;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
-    width: 200px; /* Adjust the width as needed */
-    display: grid; /* Use grid container */
-    grid-template-columns: 1fr; /* Single column layout */
-    gap: 10px; /* Adjust the gap between items */
-    float: left; /* Align to the left side */
-    margin-right: 20px; /* Add margin to create space between filter and content */
+    width: 220px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+    float: left;
+    margin-right: 20px;
     margin-top: 150px;
 }
 
-
 .boarding-filter h3 {
-    color: #333;
-    margin-bottom: 10px;
-    grid-column: 1; /* Span across one column */
+    color: #333333;
+    margin-bottom: 15px;
+    grid-column: 1;
     text-align: left;
+    font-size: 18px;
 }
 
 .boarding-filter input {
     width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    padding: 12px;
+    margin-bottom: 15px;
+    border: 1px solid #d2d2d2;
+    border-radius: 6px;
     box-sizing: border-box;
-    grid-column: 1; /* Span across one column */
+    grid-column: 1;
+    font-size: 14px;
 }
 
 .boarding-filter label {
     display: block;
-    margin-bottom: 8px;
-    color: #555;
+    margin-bottom: 10px;
+    color: #555555;
     text-align: left;
-    grid-column: 1; /* Span across one column */
+    grid-column: 1;
+    font-size: 14px;
 }
 
 .boarding-filter button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 15px;
+    background-color: #3498db;
+    color: #ffffff;
+    padding: 12px 15px;
     border: none;
-    border-radius: 4px;
+    border-radius: 6px;
     cursor: pointer;
-    grid-column: 1; /* Span across one column */
+    grid-column: 1;
+    transition: background-color 0.3s ease;
+    font-size: 14px;
 }
 
 .boarding-filter button:hover {
-    background-color: #0056b3;
+    background-color: #1d6fa5;
+}
+
+/* Dark Mode */
+
+body.dark-mode .boarding-filter {
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    border-color: #34495e;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+body.dark-mode .boarding-filter h3 {
+    color: #ecf0f1;
+}
+
+body.dark-mode .boarding-filter input,
+body.dark-mode .boarding-filter label {
+    color: #ecf0f1;
+}
+
+body.dark-mode .boarding-filter button {
+    background-color: #2980b9;
+    color: #ecf0f1;
+}
+
+body.dark-mode .boarding-filter button:hover {
+    background-color: #1c4966;
 }
